<resources>
    <string name="ux_cam_app_key">cpv4jp007ywix6x</string>
    <string name="segment_jey">ArTgdJ2yAsbjtEuQL4PYyeLDOHJ6k4xg</string>
    <string name="apps_flayer_key">pdDuzVhDY8UpBHir8tgvKc</string>
    <string name="app_center_key">1995d4eb-7e59-44b8-8832-6550bd7752ff</string>
    <string name="isBranchTestMode">false</string>
    <string name="appsee_api_key">ab7af46b578c4e219e42646c0e9f4db6</string>
    <string name="facebook_app_id">795355207569753</string>
    <string name="fb_login_protocol_scheme">fb795355207569753</string>
    <string name="split_api_key">bj48b15galmv6j5mf6s7ckc2jqepqg53ghg3</string>
    <string name="tool_tip_service_fee_title">Service fee</string>
    <string name="tool_tip_service_fee_body">
        <![CDATA[The service fee goes toward helping us pay couriers, provide quality customer support & logistics, process payments, and other costs associated with running our service.]]></string>

    <string name="default_notification_channel_id">notifications_channel</string>

    <string name="crop_image_menu_crop">Save</string>

    <string name="view_dialer_2_under_txt">ABC</string>
    <string name="view_dialer_3_under_txt">DEF</string>
    <string name="view_dialer_4_under_txt">GHI</string>
    <string name="view_dialer_5_under_txt">JKL</string>
    <string name="view_dialer_6_under_txt">MNO</string>
    <string name="view_dialer_7_under_txt">PQRS</string>
    <string name="view_dialer_8_under_txt">TUV</string>
    <string name="view_dialer_9_under_txt">WXYZ</string>

    <string name="default_bupp_phone_number">+16179096185</string>

    <string name="welcome_fragment_login_btn">Get started</string>
    <string name="welcome_fragment_sign_up_btn">I already have an account</string>

    <string name="phone_verification_fragment_next_btn">Next</string>
    <string name="phone_verification_fragment_title">Enter your mobile number</string>
    <string name="phone_verification_fragment_phone_hint">+1 (201) 555 - 0123</string>

    <string name="details_setup_fragment_address">Address</string>
    <string name="details_setup_fragment_address_hint">Street address and building number</string>
    <string name="details_setup_fragment_apt_hint">Apt./ suite/ floor</string>
    <string name="details_setup_fragment_delivery_hint">Add delivery note</string>

    <string name="create_account_fragment_title">Create your account</string>
    <string name="create_account_fragment_full_name_title">Full name</string>
    <string name="create_account_fragment_full_name_hint">Your full name</string>
    <string name="create_account_fragment_email">Email</string>
    <string name="create_account_fragment_email_hint">Name@example.com</string>
    <string name="create_account_fragment_next_btn">Next</string>

    <string name="code_fragment_title">Enter The 4-digit code</string>
    <string name="location_permission_title">Allow location permission</string>
    <string name="code_fragment_sub_title">Sent to you at</string>
    <string name="code_fragment_help">Haven’t received the code?</string>
    <string name="code_fragment_resend_btn">Resend</string>
    <string name="code_fragment_next_btn">Next</string>
    <string name="support_dialog_popular_qa_button">Frequently asked questions</string>
    <string name="support_dialog_contuct_us_button">Contact us</string>
    <string name="support_dialog_title">Support center</string>
    <string name="support_frag_sms_sentence"></string>
    <string name="common_string_address">Address</string>
    <string name="common_string_address_hint">Street address and building number</string>
    <string name="common_string_apartment">Apt./ suite/ floor</string>
    <string name="add_address_frag_delivery_to_door">Delivery to door</string>
    <string name="add_address_frag_pick_up_outside">Pick up outside</string>
    <string name="later_time">
        <u>Later time</u>
    </string>
    <string name="start_new_cart_dialog_your_cart_already_contains">Your cart already contains a dish from cook %1$s.
        Would you like to clear the cart and add this dish from cook %2$s instead?
    </string>
    <string name="share_dialog_share_text">Share woodspoon with your friends, and you all can get a 30% off your next
        order
    </string>
    <string name="tool_tip_delivery_fee_title">Delivery fee</string>
    <string name="tool_tip_delivery_fee_body">Delivery fees are typically based on the distance between you and your
        food.
    </string>
    <string name="tool_tip_min_order_fee_title">Small order fee</string>
    <string name="tool_tip_min_order_fee_body">This fee only applies to orders less than</string>
    <string name="tool_tip_min_order_fee_body2">Add items to remove the fee.</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_active_orders_tracker">ActiveOrdersTrackerActivity</string>
    <string name="common_string_order_number">Order no.</string>

    <string name="order_history_item_reorder">
        <u>Rate order</u>
    </string>
    <string name="order_history_item_report">
        <u>Report issue</u>
    </string>
    <string name="order_history_item_by_cook">Home Chef</string>
    <string name="cancel_dialog_stage_1_title">No cancellation fee</string>
    <string name="cancel_dialog_stage_1_body">We are sorry to see you have to cancel your order. Because our cook still didn\'t
        start preparing your dish,
        per our cancellation policy, there is no cancellation fee. \n We hope you consider ordering again with us soon
    </string>
    <string name="cancel_dialog_stage_2_title">50%% cancellation fee</string>
    <string name="cancel_dialog_stage_2_body">"We are sorry to see you have to cancel your order. Per our cancellation policy,
        because our cook already started to prepare your order, you will be charged for 50%% of the order cost.
        \n We hope you can understand and wishing to see you ordering again soon"
    </string>
    <string name="cancel_dialog_stage_3_title">"100%% cancellation fee"</string>
    <string name="cancel_dialog_stage_3_body">"We are sorry to see you cancel your order. Per our cancellation policy,
        because your order is already on its way, you will be charged for 100% of the order cost.
        \n We hope you can understand and wishing to see you ordering again soon"
    </string>
    <string name="title_activity_address_chooser">AddressChooserActivity</string>
    <string name="fcm_message_title">WoodSpoon</string>
    <string name="title_activity_event">EventActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="un_available_dish_alerter_body">This dish is available outside the delivery window you selected</string>
    <string name="device_location_off_alerter_body">You disabled your location services. WoodSpoon is using your last saved address for now.</string>

    <string name="phone_verification_fragment_phone_error">Please enter a valid phone</string>
    <string name="login_error_wrong_code">Invalid or expired activation code, please try again</string>
    <string name="login_error_wrong_phone">Invalid phone number</string>
    <string name="default_server_error">Server error, Please try again later</string>
    <string name="something_went_wrong_error">Something went wrong, Try again</string>
    <string name="term_of_use"><u>Term of use</u></string>
    <string name="triangle_string">▼</string>
    <string name="delivery_method_deliver_to_door">delivery_to_door</string>
    <string name="delivery_method_pickup_outside">pickup_outside</string>
    <!--    <string name="google_api_key">AIzaSyCowuTI2_0q8rpGYlqueBX6nbk2kSjjitU</string>-->

    <string name="banner_my_location">Enter your address to discover Home Chefs that deliver to you</string>
    <string name="banner_no_location">You are seeing home chefs based on your last saved address since we’re unable to get your current location.</string>
    <string name="banner_known_address">Since your location services are off, WoodSpoon is using your last saved address</string>
    <string name="banner_no_gps"> You disabled your location services. WoodSpoon is using your last saved address for now.</string>
    <string name="banner_no_available_dishes">Looks like our home chefs are unavailable at that time. Check out these other options!</string>
    <string name="bottom_bar_item_counter">Add %1$s To Cart</string>
    <string name="bottom_bar_place_an_order">PLACE AN ORDER</string>
    <string name="bottom_bar_tract_your_order">Track your order</string>
    <string name="bottom_bar_procees_to_cart">Proceed to cart</string>
    <string name="wood_spoon_chefs_play_store_url">https://play.google.com/store/apps/details?id=com.bupp.wood_spoon_chef</string>
    <string name="checkout_utensils_on">These items will be added to your order</string>
    <string name="checkout_utensils_off">These items won’t be included unless you ask</string>

    <string name="rate_popup_ask_title">Like this App?</string>
    <string name="rate_popup_ask_message">Do you like using this application?</string>
    <string name="rate_popup_ask_ok">Yes I do</string>
    <string name="rate_popup_ask_no">Not really</string>

    <!--    rating bottom sheet-->
    <string name="rate_popup_title">Rate this app</string>
    <string name="rate_popup_message">Would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_popup_ok">Rate it now</string>
    <string name="rate_popup_later">Remind me later</string>
    <string name="rate_popup_no">No, thanks</string>
    <string name="tool_tip_courier_title">Tip your service providers</string>
    <string name="tool_tip_courier_body">Courier tip is recommended based on the delivery effort and the total distance that they have to drive to pick up and deliver your order. 100% of the tip goes to your courier</string>
    <string name="thank_you">Thank You!</string>
    <string name="report_issue_done_body">Your report has been submitted to our customer service team.  WoodSpoon is working hard to resolve this issue!</string>
    <string name="rate_order_done_body">Your rating has been submitted!</string>
    <string name="campaign_full_details_title">Terms of use</string>
    <string name="by_dishes_restaurants_chefs_or_dietary">By dishes, restaurants, chefs or dietary</string>
    <string name="fees_and_estimated_tax_title">Fees &amp; Estimated tax</string>
    <string name="estimated_tax_title">Estimated tax</string>
</resources>
