<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:paddingLeft="15.4dp"
        android:paddingRight="15.4dp"
        android:paddingTop="26dp"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.bupp.wood_spoon_eaters.features.main.delivery_details.sub_screens.add_new_address.DeliveryDetailsSetup">

    <com.bupp.wood_spoon_eaters.custom_views.ActionTitleView
            android:id="@+id/detailsSetupFragmentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isMandatory="true"
            app:lines="1"
            app:hint="@string/details_setup_fragment_address_hint"
            app:title="@string/details_setup_fragment_address"
            app:action="LOCATION_CHOOSER"
            android:layout_marginTop="15.4dp"/>

    <com.bupp.wood_spoon_eaters.custom_views.InputTitleView
            android:id="@+id/detailsSetupFragAddress2ndLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/dark_50"
            android:textColor="@color/dark"
            android:textSize="13.4sp"
            android:layout_marginTop="15.4dp"
            app:hint="@string/details_setup_fragment_apt_hint"
            app:title="@string/details_setup_fragment_apt_hint"
            app:isMandatory="true"
            android:gravity="start"/>

    <EditText
            android:id="@+id/detailsSetupFragDeliveryNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details_setup_fragment_delivery_hint"
            android:textColorHint="@color/dark_50"
            android:textColor="@color/dark"
            android:textSize="13.4sp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:paddingLeft="15.4dp"
            android:paddingRight="15.4dp"
            android:layout_marginTop="15.4dp"
            android:background="@drawable/title_input_view_input_bkg"
            android:gravity="start"/>

    <View
            android:layout_marginTop="22dp"
            android:background="@color/light_periwinkle"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <CheckBox
            android:id="@+id/detailsSetupFragCbDoor"
            style="@style/Reg13Dark"
            android:lines="1"
            android:text="Delivery to door"
            android:button="@drawable/checkbox_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>
