<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <TextView
            android:id="@+id/title"
            style="@style/LatoBlack23Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:letterSpacing="0.03"
            android:paddingStart="15.4dp"
            android:text="Enter Your Mobile Number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/subtitle"
            style="@style/LatoReg13Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.2dp"
            android:letterSpacing="0.03"
            android:lineSpacingExtra="6.7sp"
            android:paddingStart="15.4dp"
            android:text="You will receive an SMS to confirm your \nphone number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:paddingHorizontal="15.4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                android:id="@+id/verificationFragFlagLayout"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/verificationFragIsoLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="3dp"
                    android:paddingStart="15.4dp"
                    android:paddingEnd="11dp"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/verificationFragFlag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7.7dp"
                        android:textSize="18sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/triangle_string"
                        android:textColor="@color/black" />

            </LinearLayout>

            <View
                    app:layout_constraintEnd_toEndOf="@+id/verificationFragIsoLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verificationFragIsoLayout"
                    android:layout_marginHorizontal="7.7dp"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/light_periwinkle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.bupp.wood_spoon_eaters.views.WSEditText
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/verificationFragFlagLayout"
                android:layout_gravity="top"
                android:layout_marginTop="2.7dp"
                android:layout_marginStart="25dp"
                android:id="@+id/verificationFragmentInput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:error="@string/phone_verification_fragment_phone_error"
                app:hint="Mobile number"
                app:inputType="PHONE"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.7dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/verificationFragmentNext">

        <TextView
                style="@style/LatoReg11Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8.6sp"
                android:gravity="center_horizontal"
                android:text="By continuing you confirm our"/>

        <TextView
                android:id="@+id/verificationFragmentTerms"
                android:layout_marginStart="8dp"
                android:background="@drawable/pale_grey_cornered_rect"
                android:paddingVertical="5dp"
                android:paddingHorizontal="9dp"
                style="@style/LatoBold11Teal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8.6sp"
                android:gravity="center_horizontal"
                android:text="Terms of use"/>

    </LinearLayout>

    <com.bupp.wood_spoon_eaters.custom_views.BlueBtnCornered
            android:id="@+id/verificationFragmentNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="15.4dp"
            android:paddingBottom="7.4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:title="@string/phone_verification_fragment_next_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>

